Update to use *.uml.fhir.common

--- a/plugins/org.eclipse.mdht.uml.fhir.ui/plugin.properties
+++ b/plugins/org.eclipse.mdht.uml.fhir.ui/plugin.properties
@@ -40,3 +40,7 @@ addFHIR.Comment.requirements.label = Requirements
 
 importFHIR.label = Import FHIR Definitions
 exportFHIR.label = Export FHIR Definitions
+
+# Properties view tabs
+tab.fhir.label = FHIR
+tab.fhir.types.label = Types
